--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "tailwindcss": "^3.4.13"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build:css": "postcss src/styles.css -o public/css/styles.css"
   }
 }
