--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.5.9",
     "autoprefixer": "^10.4.20",
+    "cssnano": "^7.0.6",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
@@ -10,6 +11,6 @@
   },
   "scripts": {
     "start": "node server.js",
-    "build:css": "postcss src/styles.css -o public/css/styles.css"
+    "build:css": "postcss src/styles.css -o public/css/styles.css --minify"
   }
 }
